fix(ci): simplify workflow by using vendored files
Replace download step with direct use of vendored files in the repository:

- Remove Grobid download and caching steps
- Keep JRE runtime caching for platform-specific components
- Update documentation to reflect the simplified approach
- Eliminate potential download failures from external resources